[package]
name = "yap-frontend-cli"
version = "0.1.0"
authors = ["jonas crull"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cursive = { version = "0.16.3", default-features = false, features = ["pancurses-backend", "toml"] }
regex = "1.4.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
openssl = "0.10.33"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
xdg = "2.2.0"
chrono = "0.4.19"
